@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-09-06T01:41:49Z",
+  "timestamp" : "2024-09-06T12:40:52Z",
   "count_outdated" : 4285,
   "uniques_outdated" : 766,
-  "count" : 4531,
-  "uniques" : 800,
+  "count" : 4532,
+  "uniques" : 801,
   "views" : [
     {
       "timestamp": "2024-08-23T00:00:00Z",
@@ -118,6 +118,15 @@
       "count": 53,
       "count_minmax": [ 53, 53 ],
       "count_decinc": [ 0, 53 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-09-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
